# CleanSweep

./: .gitignore  Cargo.toml  FUNCTIONALITY.md  README.md  TODO  example_precise_workflow.json  pyproject.toml
cleansweep/: cli.py  cmd.py
cleansweep/codecs/: file_array_codec.py  file_item_codec.py  file_set_array_codec.py  storage_paths_codec.py  user_settings_codec.py
cleansweep/commands/: __init__.py  activate_override.py  command.py  demolish.py  help.py  list.py  manage_sets.py  purge.py  reset.py  scan.py  set_scan.py  settings.py  setup.py  uninstall.py
cleansweep/containers/: __init__.py  file_item.py  file_statistics.py  set_management_pair.py  stack.py  user_settings.py
cleansweep/file_item/: file_item.py
cleansweep/file_system/: filesystem.py
cleansweep/globals/: filter_codes.py  flag_codes.py  log_levels.py  set_management_strategy.py  singleton_metaclass.py  storage_paths.py  user_setting_variant.py
cleansweep/interfaces/: json_codec.py
cleansweep/single_funcs/: get_main_path.py  settings_command_list_default.py
cleansweep/systems/: defaults_system.py  file_accessor_and_filter.py  file_system.py  filter_system.py  json_reader.py  json_system.py  logger_system.py  scanning_system.py  settings_system.py
cleansweep/types/: filter_codes.py  json.py  user_settings_union.py
cleansweep/user_settings/: settings.py
cleansweep/utils/: get_main_path.py  (+14 more)
doc/: functionality.md  manage_sets.md  override.md  print_hidden_stats.md  scan.md  set_scan.md  settings.md  setup.md  user_settings.md
src/: cleansweep_error.rs  cli.rs  main.rs
(+63 files in other folders)
