[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleansweep"
version = "0.1.0"
description = "A tool to flag old and large files for cleanup."
authors = [
    { name="Tristan Rimmer", email="tristan.rimmer@stfc.ac.uk" }
]
requires-python = ">=3.9"

[project.scripts]
cleansweep = "cleansweep.cmd:main"
