[project]
name = "cleansweep"
version = "0.1.0"
description = "A tool to flag old and large files for cleanup."
authors = [{ name="Tristan Rimmer", email="tristan.rimmer@stfc.ac.uk" }]
requires-python = ">=3.9"

[project.scripts]
cleansweep = "cleansweep.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
